--- a/css/windows-controls.css
+++ b/css/windows-controls.css
@@ -7,16 +7,35 @@ Windows Contols
     --color-1-border: #D6D6D6;
     --color-1-hover: #D5E7F8;
     --color-1-border-hover: #7AB1E8;
+    --color-1-active: #B8D8F9;
+    --color-1-border-active: #62A3E5;
 
+    --color-3-border: #D7D7D7;
+    --color-2-border: #979797;
+
+    --color-4: #E1E1E1;
+    --color-4-border: #AEAEAE;
+}
+
+*
+{
+    margin: 0;
+    padding: 0;
+
+    float: left;
 }
 
 /*
 Windows menu
 */
-.windows-menu
+.windows-menu, .windows-dropdown-menu
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
+
+    user-select: none;
+
+    cursor: default;
 }
 
 .windows-menu
@@ -29,13 +48,17 @@ Windows menu
     border-bottom: 1px solid var(--color-1-border);
 }
 
+.windows-menu li[data-active=true]
+{
+    background-color: var(--color-1-active);
+    border: 1px solid var(--color-1-border-active);
+}
+
 .windows-menu li, .windows-menu-title
 {
-    cursor: default;
-
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 2px;
+    padding-top: 1px;
     padding-bottom: 2px;
 
     background-color: var(--color-1);
@@ -46,4 +69,79 @@ Windows menu
 {
     background-color: var(--color-1-hover);
     border: 1px solid var(--color-1-border-hover);
+}
+
+.menu li[data-enabled=false] , .windows-menu-title[data-enabled=false]
+{
+    color: var(--color-4-border);
+}
+
+.menu li[data-enabled=false]:hover, .windows-menu-title[data-enabled=false]:hover
+{
+    color: var(--color-4-border);
+    border: 1px solid transparent;
+    background-color: transparent;
+}
+
+/*
+Dropdown menu's
+*/
+.windows-dropdown-menu
+{
+    position: absolute;
+    background-color: var(--color-1);
+
+    list-style: none;
+
+    display: none;
+
+    padding: 2px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+
+    border: 1px solid var(--color-2-border);
+}
+
+.windows-dropdown-menu li
+{
+    float: none;
+    width: 100%;
+
+    padding: 3px;
+    padding-left: 25px;
+    padding-right: 50px;
+
+    border: 1px solid var(--color-1);
+}
+
+.windows-dropdown-menu li:hover
+{
+    background-color: var(--color-1-hover);
+    border: 1px solid var(--color-1-border-hover)
+}
+
+.windows-dropdown-menu .windows-dropdown-menu-divider
+{
+    padding: 0;
+    width: calc(100% - 27px);
+    border-bottom: 1px solid var(--color-3-border);
+    margin: 3px;
+    margin-left: 25px;
+}
+
+.windows-dropdown-menu .windows-dropdown-menu-divider:hover
+{
+    border: 1px solid transparent;
+    border-bottom: 1px solid var(--color-3-border);
+    background-color: transparent;
+}
+
+.windows-dropdown-menu li[data-enabled="false"] 
+{
+    color: var(--color-4-border);
+}
+
+.windows-dropdown-menu li[data-enabled="false"]:hover
+{
+    background-color: var(--color-4);
+    border: 1px solid var(--color-4-border);
 }
